# LCLib-CXX

./: .gitignore  CMakeLists.txt  Makefile.in  README.md  configure  configure.ac
.github/workflows/: linux.yml
autom4te.cache/: requests  traces.0
docs/: Config.md  DynamicArray.md  FullSpecification.md  GeneralLibraryRules.md  Numeric.md  Polymorphic.md  Time.md  TypeTraits.md  Version.md
include/lclib-c++/: BinaryIOHelpers.hpp  CXMath.hpp  Config.hpp  Dynamic.hpp  DynamicArray.hpp  IOWrapper.hpp  Numerics.hpp  Polymorphic.hpp  Ranges.hpp  Sockets.hpp  Time.hpp  TypeTraits.hpp  Version.hpp
include/lclib-c++/bits/: Helpers.hpp
src/: IOWrapper.cpp  PosixDSO.cpp  PosixSocket.cpp  Version.cpp  WinDLL.cpp  WinSock.cpp
tests/: CMakeLists.txt
tests/dynamic_array/: 01-DynamicArrayDefault.cpp  02-DynamicArrayElementType.cpp  03-DynamicArrayReference.cpp  04-DynamicArrayConstReference.cpp  05-DynamicArrayPointer.cpp  06-DynamicArrayConstPointer.cpp  07-DynamicArraySizeType.cpp  08-DynamicArrayDifferenceType.cpp  09-DynamicArrayIterator.cpp  10-DynamicArrayConstIterator.cpp  11-DynamicArrayReverseIterator.cpp  12-DynamicArrayConstReverseIterator.cpp  13-DynamicArrayInitializerList.cpp  CMakeLists.txt
tests/type_traits/: 01-is_specialization-specialization.cpp  02-is_specialization-not-specialization.cpp  03-conditional_substitute_true.cpp  04-conditional_substitute_false.cpp  05-conditional_substitute-substitution-failure.cpp  CMakeLists.txt  no_member_type.hpp
tests/version/: 01-version-value.cpp  02-version-construct.cpp  03-version-compare.cpp  04-version-structural.cpp  CMakeLists.txt
